--- a/main.html
+++ b/main.html
@@ -7,14 +7,13 @@
 </head>
 
 <body>
-
-	<div class="main">
-
-		<div class="green"></div>
+<container>
+	
+	<div class="green"></div>
 		<div class="yellow"></div>
 		<div class="red"></div> 
 		
-	</div>
+	</container>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
